# landscape_processes

./: .gitignore  README.md  pyproject.toml
configs/: battlecreek.toml
landscape_processes/: data_functions.py  map.py  raster_utils.py  terrain.py  threshholds.py  thresholds.py
notebooks/: Untitled.ipynb  map_dominant_landscape_processes.ipynb
scripts/: 01_dl_sample_data.py  02_preprocess_sample_data.py  data_functions.py  dl_sample_data.py  funcs.py  map_processess.py  raster_utils.py
